<resources>
    <string name="app_name">WeStudent</string>
    <string name="project_name">Android University Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration_page">Registration Page</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="surname">Family Name</string>
    <string name="enter_your_surname">Enter Your Family Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="ok">OK</string>
    <string name="view_profile">View Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="settings">Settings</string>
    <string name="all_posted_projects">All Posted Projects</string>
    <string name="chats">Chats</string>
    <string name="projects_that_i_looked_for_partners">Projects That I Looked For Partners</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="change_profile_pic">Change Profile Pic</string>

    <string name="disconnect">Disconnect</string>
    <string name="your_friends">Your Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="your_groups">Your Groups</string>
    <string name="your_projects">Your Projects</string>
    <string name="subject">Subject</string>
    <string name="participants">Participants</string>
    <string name="description">Description</string>
    <string name="project_type">Project Type</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload_student_card">Upload Student Card</string>
    <string name="main_screen">Main Screen</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="date">Date</string>
    <string name="group_description">Group Description</string>
    <string name="max_capacity">Max Capacity</string>
    <string name="create">Create</string>
    <string name="enter_a_bio">Enter A Bio</string>
    <string name="bio">BIO</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="enter_an_address">Enter An Address</string>
    <string name="delete_user">Delete User</string>
    <string name="notifications">Notifications</string>
    <string name="create_project">Create Project</string>
    <string name="members">Members:</string>
    <string name="manager">Manager:</string>
    <string name="leave_group">Leave Group</string>

    <string-array name="years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="department">
        <item>computers</item>
        <item>math</item>
        <item>physics</item>
        <item>medical</item>
        <item>engineering</item>
        <item>psychology</item>
        <item>grass</item>
    </string-array>
</resources>