<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.westudentmain.activities.showProfile">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/your_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilepicview"
        android:layout_width="248dp"
        android:layout_height="157dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="407dp"
        android:layout_height="214dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilepicview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/universitytextview"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/departmenttextview"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/degreetextview"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/yeartextview"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/biotextview"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/fwaitextview"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:layout_marginEnd="8dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <Button
        android:id="@+id/btn_apposted"
        android:layout_width="197dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/all_posted_projects"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ptilfpartners" />

    <Button
        android:id="@+id/btn_ptilfpartners"
        android:layout_width="197dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/projects_that_i_looked_for_partners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>